fixed layout issues concerning buttons

--- a/angular/src/app/recipes/shared/dialogs/recipe-patch-dialog/recipe-patch-form/recipe-patch-form.component.css
+++ b/angular/src/app/recipes/shared/dialogs/recipe-patch-dialog/recipe-patch-form/recipe-patch-form.component.css
@@ -59,7 +59,10 @@
 }
 
 .button-wrapper {
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  padding: 0 24px 24px 24px;
+  display: flex;
+
+  button {
+    flex: 1;
+  }
 }
